--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,35 +1,15 @@
-name: Recolector SADI
-
-on:
-  schedule:
-    - cron: '*/5 * * * *' # Ejecutar cada 5 minutos
-  workflow_dispatch: # Permite ejecutar manualmente para probar
-
-permissions:
-  contents: write
-
-jobs:
-  run-scraper:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
-
-      - name: Instalar Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Instalar librerías
-        run: pip install requests pandas
-
-      - name: Correr script
-        run: python bot.py
-
-      - name: Guardar cambios
+- name: Guardar cambios
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.name "SadiBot"
-          git config user.email "bot@users.noreply.github.com"
-          git add sadi_historico.csv
-          git commit -m "Actualización automática de datos" || exit 0
-          git push
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          
+          # Verificamos si el archivo existe antes de intentar agregarlo
+          if [ -f sadi_historico.csv ]; then
+            git add sadi_historico.csv
+            # Solo hace commit si hay algo nuevo para subir
+            git diff --quiet && git diff --staged --quiet || (git commit -m "Update datos $(date +'%Y-%m-%d %H:%M')" && git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main)
+          else
+            echo "El archivo sadi_historico.csv no fue creado. Saltando commit."
+          fi
