--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,4 +1,32 @@
-- name: Guardar cambios
+name: Recolector SADI
+
+on:
+  schedule:
+    - cron: '*/10 * * * *' # Se ejecuta cada 10 minutos
+  workflow_dispatch:      # Botón para ejecutar manual
+
+permissions:
+  contents: write
+
+jobs:
+  run-scraper:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+
+      - name: Instalar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Instalar librerías
+        run: pip install requests pandas
+
+      - name: Correr script
+        run: python bot.py
+
+      - name: Guardar cambios
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -8,8 +36,8 @@
           # Verificamos si el archivo existe antes de intentar agregarlo
           if [ -f sadi_historico.csv ]; then
             git add sadi_historico.csv
-            # Solo hace commit si hay algo nuevo para subir
+            # Solo hace commit si hay cambios reales para no ensuciar el historial
             git diff --quiet && git diff --staged --quiet || (git commit -m "Update datos $(date +'%Y-%m-%d %H:%M')" && git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main)
           else
-            echo "El archivo sadi_historico.csv no fue creado. Saltando commit."
+            echo "El archivo sadi_historico.csv no fue creado por el script. Revisar logs de bot.py."
           fi
